# pallets.leapcell.app

./: .gitignore  README.md  config.py  freeze.py  pallets.py  pyproject.toml
assets/javascripts/: main.js
assets/stylesheets/: pallets.css
content/: about.md  index.md  projects.md
content/blog/: index.md
content/projects/: flask.md
requirements/: requirements.in  requirements.txt
templates/: base.html  page.html
templates/partials/: head.html  header.html  javascripts.html
